--- a/PocketJW/app/src/main/res/layout/activity_problem_item.xml
+++ b/PocketJW/app/src/main/res/layout/activity_problem_item.xml
@@ -1,13 +1,8 @@
-<ScrollView
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scrollbars="vertical"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/publisherLinearLayout"
@@ -136,15 +131,13 @@
             android:id="@+id/solutionLinearLayout"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <com.handmark.pulltorefresh.library.PullToRefreshListView
                 android:id="@+id/commentsListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
