--- a/PocketJW/app/src/main/res/layout/fragment_more.xml
+++ b/PocketJW/app/src/main/res/layout/fragment_more.xml
@@ -1,161 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp">
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <!-- news -->
         <LinearLayout
-            android:id="@+id/newsLinearLayout"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/linearlayout_bg">
+            android:layout_marginBottom="2dp">
 
-            <ImageView
-                android:id="@+id/newsImageView"
-                android:layout_width="wrap_content"
+            <!-- news -->
+            <LinearLayout
+                android:id="@+id/newsLinearLayout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:src="@drawable/more_news"/>
+                android:background="@drawable/linearlayout_bg">
 
-            <TextView
-                android:id="@+id/newsTextView"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/newsImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/more_news"/>
+
+                <TextView
+                    android:id="@+id/newsTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/more_news"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
+
+            <!-- contact -->
+            <LinearLayout
+                android:id="@+id/contactLinearLayout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/more_news"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp" />
+                android:background="@drawable/linearlayout_bg">
 
+                <ImageView
+                    android:id="@+id/contactImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/more_contact"/>
+
+                <TextView
+                    android:id="@+id/contactTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/more_contact"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
         </LinearLayout>
 
-        <!-- contact -->
         <LinearLayout
-            android:id="@+id/contactLinearLayout"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/linearlayout_bg">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp">
 
-            <ImageView
-                android:id="@+id/contactImageView"
-                android:layout_width="wrap_content"
+            <!-- setting -->
+            <LinearLayout
+                android:id="@+id/settingLinearLayout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:src="@drawable/more_contact"/>
+                android:background="@drawable/linearlayout_bg">
 
-            <TextView
-                android:id="@+id/contactTextView"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/settingImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/more_setting"/>
+
+                <TextView
+                    android:id="@+id/settingTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/more_setting"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
+
+            <!-- profile -->
+            <LinearLayout
+                android:id="@+id/profileLinearLayout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/more_contact"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp" />
+                android:background="@drawable/linearlayout_bg">
 
+                <ImageView
+                    android:id="@+id/profileImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/more_profile"/>
+
+                <TextView
+                    android:id="@+id/profileTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/more_profile"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
+
+            </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp">
+
+            <!-- logout -->
+            <LinearLayout
+                android:id="@+id/logoutLinearLayout"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/linearlayout_bg">
+
+                <ImageView
+                    android:id="@+id/logoutImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/more_logout"/>
+
+                <TextView
+                    android:id="@+id/logoutTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/more_logout"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp">
-
-        <!-- setting -->
-        <LinearLayout
-            android:id="@+id/settingLinearLayout"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/linearlayout_bg">
-
-            <ImageView
-                android:id="@+id/settingImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:src="@drawable/more_setting"/>
-
-            <TextView
-                android:id="@+id/settingTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/more_setting"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp" />
-
-        </LinearLayout>
-
-        <!-- profile -->
-        <LinearLayout
-            android:id="@+id/profileLinearLayout"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/linearlayout_bg">
-
-            <ImageView
-                android:id="@+id/profileImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:src="@drawable/more_profile"/>
-
-            <TextView
-                android:id="@+id/profileTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/more_profile"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp" />
-
-        </LinearLayout>
-
-        </LinearLayout>
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp">
-
-        <!-- logout -->
-        <LinearLayout
-            android:id="@+id/logoutLinearLayout"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/linearlayout_bg">
-
-            <ImageView
-                android:id="@+id/logoutImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:src="@drawable/more_logout"/>
-
-            <TextView
-                android:id="@+id/logoutTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/more_logout"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
