--- a/PocketJW/app/src/main/res/layout/listviewitem_comment.xml
+++ b/PocketJW/app/src/main/res/layout/listviewitem_comment.xml
@@ -3,15 +3,44 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:layout_margin="8dp"
+    android:background="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/gravatarImageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="8dp" />
+
+        <TextView
+            android:id="@+id/approvalTextView"
+            android:layout_width="32dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:background="@android:color/holo_blue_light"/>
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical"
         android:layout_gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/publisherTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/commentTextView"
@@ -22,11 +51,5 @@
             android:textSize="12sp" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/gravatarImageView"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_margin="8dp" />
 
 </LinearLayout>
